--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "pg": "4.x",
-    "express": "~4.9.x"
+    "express": "~4.9.x",
+    "mysql": ""
   },
   "engines": {
     "node": "0.10.x"
