--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "pg": "4.x",
+    "body-parser": "^1.11.0",
     "express": "~4.9.x",
     "mysql": "",
-    "body-parser":""
+    "pg": "4.x"
   },
   "engines": {
     "node": "0.10.x"
@@ -22,12 +22,12 @@
     "node",
     "heroku",
     "express",
-    "static", 
-    "url", 
-    "mysql", 
+    "static",
+    "url",
+    "mysql",
     "path",
-    "fs-extra", 
-    "body-parser", 
+    "fs-extra",
+    "body-parser",
     "keyword-extractor"
   ],
   "license": "SHENKAR"
