--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "body-parser": "^1.11.0",
     "express": "~4.9.x",
     "mysql": "",
-    "pg": "4.x"
+    "pg": "4.x",
+    "router":""
   },
   "engines": {
     "node": "0.10.x"
