--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cloudinary": "^1.1.2",
     "connect-multiparty": "^1.2.5",
     "daemon": "^1.1.0",
+    "ejs": "^2.3.1",
     "express": "~4.9.x",
     "formidable": "^1.0.17",
     "fs-extra": "^0.18.0",
