--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "connect-multiparty": "^1.2.5",
     "daemon": "^1.1.0",
     "ejs": "^2.3.1",
-    "express": "~4.9.x",
+    "express": "^4.9.8",
     "formidable": "^1.0.17",
     "fs-extra": "^0.18.0",
     "mongodb": "^2.0.25",
