--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formidable": "^1.0.17",
     "fs-extra": "^0.18.0",
     "mongodb": "^2.0.25",
+    "mongoose": "^4.0.1",
     "multiparty": "^4.1.1",
     "mysql": "^2.6.1",
     "nodemon": "^1.3.7",
