--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.12.2",
     "cloudinary": "^1.1.2",
+    "connect": "^3.3.5",
     "connect-multiparty": "^1.2.5",
     "daemon": "^1.1.0",
     "ejs": "^2.3.1",
