--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs-extra": "^0.18.2",
     "mongodb": "^2.0.25",
     "mongoose": "^4.0.1",
+    "mongoose-text-search": "0.0.2",
     "multiparty": "^4.1.1",
     "mysql": "^2.6.1",
     "nodemon": "^1.3.7",
