--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "fluent-ffmpeg": "^2.0.1",
     "formidable": "^1.0.17",
     "fs-extra": "^0.18.2",
+    "gcm": "^1.0.1",
     "mongodb": "^2.0.25",
     "mongoose": "^4.0.1",
     "mongoose-text-search": "0.0.2",
     "multiparty": "^4.1.1",
     "mysql": "^2.6.1",
+    "node-gcm": "^0.9.15",
     "nodemon": "^1.3.7",
     "path": "^0.11.14",
     "pg": "4.x",
