--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "path": "^0.11.14",
     "pg": "4.x",
     "q": "^1.2.0",
-    "router": "^1.0.0"
+    "router": "^1.0.0",
+    "wrappy": "^1.0.1"
   },
   "engines": {
     "node": "0.10.x"
