--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fs-extra": "^0.18.2",
     "gcm": "^1.0.1",
     "jsdoc": "^3.3.1",
+    "log": "^1.4.0",
     "mongodb": "^2.0.25",
     "mongoose": "^4.0.1",
     "mongoose-text-search": "0.0.2",
