insert logs files and color just do : logger.info or logger.debug or logger.error

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pg": "4.x",
     "q": "^1.2.0",
     "router": "^1.0.0",
+    "winston": "^1.0.0",
     "wrappy": "^1.0.1"
   },
   "engines": {
