--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.2",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "grunt Gruntfile.js"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.3",
+    "grunt-jsdoc": "^0.6.7"
   },
   "dependencies": {
     "body-parser": "^1.12.3",
@@ -18,6 +23,7 @@
     "formidable": "^1.0.17",
     "fs-extra": "^0.18.2",
     "gcm": "^1.0.1",
+    "grunt-cli": "^0.1.13",
     "jsdoc": "^3.3.1",
     "log": "^1.4.0",
     "mongodb": "^2.0.25",
@@ -59,6 +65,5 @@
     "url": "https://github.com/avishayhajbi/lecturus/issues"
   },
   "homepage": "https://github.com/avishayhajbi/lecturus",
-  "devDependencies": {},
   "author": "shenkar"
 }
