--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "grunt Gruntfile.js"
+    "postinstall": "gulp js-doc"
   },
   "devDependencies": {
     "grunt": "^0.4.3",
-    "grunt-jsdoc": "^0.6.7"
+    "grunt-jsdoc": "^0.6.7",
+    "gulp": "^3.9.0",
+    "gulp-shell": "^0.4.2"
   },
   "dependencies": {
     "body-parser": "^1.12.3",
