--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "postinstall": "gulp js-doc"
+    "docs": "gulp js-doc"
   },
   "devDependencies": {
     "grunt": "^0.4.3",
